--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <p>احصل على عرض سعر فوري مع تفاصيل التكاليف</p>
         </div>
 
-        <div class="card" onclick="openModal('hhttps://shobi7z.github.io/-_-/')">
+        <div class="card" onclick="openModal('https://shobi7z.github.io/qcf/')">
             <i class="card-icon fas fa-clipboard-list"></i>
             <h2>طريقة الطلب</h2>
             <p>خطوات سهلة ومبسطة لإتمام عملية الطلب</p>
