--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
 
     <div class="dashboard">
-        <div class="card" onclick="openModal('https://shobi7z.github.io/tracking/?fbclid=PAZXh0bgNhZW0CMTEAAaZd2HPSbJYggJ6-r2dueJjo8FcnpQtJzqFoEugZ8lf4VZbSk3wlT6hpRAE_aem_2mv0tn6-kpvx1ha_0qlOpA')">
+        <div class="card" onclick="openModal('https://shobi7z.github.io/trackingv/')">
             <i class="card-icon fas fa-map-marker-alt"></i>
             <h2>تتبع طلبك</h2>
             <p>تابع شحنتك في الوقت الفعلي مع تحديثات مباشرة</p>
