--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <p>تابع شحنتك في الوقت الفعلي مع تحديثات مباشرة</p>
         </div>
 
-        <div class="card" onclick="openModal('https://shobi7z.github.io/vndrcalulct/?fbclid=PAZXh0bgNhZW0CMTEAAaZCVwHO_RFaR38U0vxFDdQH-oAYi8Y9UhX3subPLN7GcbSi9Qrltshq5e8_aem_IVI2wkdjih8AyAeBTHgmxQ')">
+        <div class="card" onclick="openModal('https://shobi7z.github.io/vndrcalulctv/')">
             <i class="card-icon fas fa-tag"></i>
             <h2>معرفة السعر</h2>
             <p>احصل على عرض سعر فوري مع تفاصيل التكاليف</p>
