--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <p>تابع شحنتك في الوقت الفعلي مع تحديثات مباشرة</p>
         </div>
 
-        <div class="card" onclick="openModal('https://shobi7z.github.io/vndrcalulctv/')">
+        <div class="card" onclick="openModal('https://shobi7z.github.io/vndrcalulctqv/')">
             <i class="card-icon fas fa-tag"></i>
             <h2>معرفة السعر</h2>
             <p>احصل على عرض سعر فوري مع تفاصيل التكاليف</p>
